# space-shooter.c

./: CMakeLists.txt
src/game/: events.cpp  game.cpp
src/platform/windows/: windows-audio.cpp
src/shared/: constants.h
